--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,6 @@ thumbs.db
 # ui
 
 dist/
-.DS_Store
-THUMBS_DB
 node_modules/
 types/
 
@@ -76,9 +74,6 @@ apps/expo/android/**
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
@@ -114,14 +109,11 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
-# TypeScript cache
-*.tsbuildinfo
 
 # Optional npm cache directory
 .npm
@@ -149,10 +141,6 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -177,7 +165,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -204,3 +191,4 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+/.idea/
